[tool.poetry]
name = "RedditPostBot"
version = "0.1.0"
description = ""
authors = ["Matthew Wisdom <matthewwisdom11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
praw = "^7.6.1"
pydantic = "^1.10.4"
python-dotenv = "^0.21.1"
prompt-toolkit = "^3.0.36"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "redditpostbot.bot:main"
poman = "redditpostbot.posts_manager:main"